[package]
name = "labello"
description = "Simple label encoder with configurable types"
keywords = ["label", "encoder", "machinelearning"]
license = "Apache-2.0/MIT"
repository = "https://github.com/fgadaleta/labello"
version = "0.0.3"
authors = ["Francesco Gadaleta <francesco@amethix.com>"]
edition = "2018"


[dependencies]

[[bench]]
name = "labello"
harness = false